--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <activity android:name=".ihm.AdminDoorPasswords" />
         <activity android:name=".ihm.MainScreen" />
-        <activity android:name=".ihm.CountdownStarted"></activity>
+        <activity android:name=".ihm.DoorOnePass"></activity>
     </application>
 
 </manifest>
