--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/key"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
@@ -16,9 +16,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".ihm.AdminDoorPasswords" />
-        <activity android:name=".ihm.MainScreen" />
+        <activity android:name=".ihm.MainScreenGames" />
         <activity android:name=".ihm.DoorOnePass" />
-        <activity android:name=".ihm.GameSelectorScreen"></activity>
+        <activity android:name=".ihm.GameSelectorScreen" />
+        <activity android:name=".ihm.DoorTwoPass" />
+        <activity android:name=".ihm.DoorPassParent"></activity>
     </application>
 
 </manifest>
